# visp-release

./: 0001-Add-install-rule-for-package.xml-build-as-shared-lib.patch  0001-Added-install-rule-for-package.xml.patch  0001-Build-shared-lib.patch  0002-Fix-GNUInstallDirs.cmake-native-usage.patch  0002-Fix-lm-library.patch  0002-Force-CMAKE_INSTALL_LIBDIR-lib.patch  0002-Set-CMAKE_INSTALL_LIBDIR-lib-to-come-over-multi-arch.patch  0003-Force-CMAKE_INSTALL_LIBDIR-lib.patch  0003-Remove-testing.patch  0003-Set-CMAKE_INSTALL_LIBDIR-lib-to-come-over-multi-arch.patch  0004-Build-shared-lib.patch  CMakeLists.txt  README.md  bloom.conf  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
CMakeModules/: FindLIBUSB-1.cmake
debian/: changelog  control  gbp.conf  rules  rules.em
groovy/: package.xml
hydro/: package.xml
indigo/: package.xml
rpm/: ros-indigo-visp.spec
