<?xml version="1.0"?>
<package>
  <name>visp</name>
  <version>2.6.2</version>
  <description>
    ViSP, standing for Visual Servoing Platform, is unique. This software
    is a complete cross-platform solution that allows prototyping and
    developing applications in visual tracking and visual servoing.

    ViSP can be useful in robotics, computer vision, augmented reality
    and computer animation.
  </description>

  <maintainer email="thomas.moulard@gmail.com">Thomas Moulard</maintainer>
  <license>GPLv2</license>

  <url type="website">http://www.ros.org/wiki/visp</url>
  <url type="bugtracker">https://github.com/thomas-moulard/visp-bloom/issues</url>
  <url type="repository">https://github.com/thomas-moulard/visp-bloom</url>

  <buildtool_depend>cmake</buildtool_depend>
</package>
